--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Zubair
-middle_name: 
+middle_name: R
 last_name: Zafar
 email: zubairzafar480@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
