--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Zubair Zafar
     - name: Date of Birth
-      value: 14th March 1879
+      value: 15th Dec 1999
     - name: Languages
-      value: English, German
+      value: English, Urdu
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: BS
+      institution: Government College University Faisalabad, Sahiwal, Pakistan
+      year: 2023
       description:
         - Description 1.
         - Description 2.
